# webndb

./: .editorconfig  .env.example  .gitattributes  .psql  README.md  compose.yml
apps/db-api/: Dockerfile  alembic.ini  pyproject.toml
apps/db-api/app/: __init__.py  config.py  const.py  database.py  meili.py  models.py  oauth.py  openapi.py
apps/db-api/app/api/: __init__.py  meta.py  pagination.py  problem_details.py  schemas.py
apps/db-api/app/api/novel/: meili.py  schemas.py  service.py  views.py
apps/db-api/app/api/volume/: meili.py  schemas.py  service.py  views.py
apps/db-api/app/api/web_novel/: schemas.py  service.py  views.py
apps/db-api/migrations/: env.py
apps/web/: .dockerignore  Dockerfile  astro.config.mjs  biome.json  package.json  pnpm-lock.yaml  starwind.config.json  wrangler.jsonc
apps/web/public/: .assetsignore
apps/web/src/components/display/: CardNovelResults.astro  CompactNovelResults.astro  GridNovelResults.astro  NovelResults.astro  StaffResults.astro
apps/web/src/components/layout/: Nav.astro  ThemeScript.astro
apps/web/src/components/nav/: DropdownMenu.astro  Sidebar.astro
apps/web/src/components/search/: Filter.astro  SearchFilter.tsx  SearchGroup.astro  SearchGroup.tsx  SearchMinMax.tsx  (+10 more)
apps/web/src/hooks/: use-mobile.ts
apps/web/src/layouts/: BaseLayout.astro
apps/web/src/pages/: novels.astro  staff.astro
apps/web/src/stores/: novelResultsView.ts  search.ts  sidebar.ts  theme.ts
apps/web/src/styles/: starwind.css  themes.css
apps/web/src/utils/: BackScript.astro  FitText.astro  ThemeScript.astro
notebooks/: pyproject.toml  scraping.ipynb
(+57 files in other folders)
