[project]
name = "db-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "cryptography>=46.0.1",
    "litestar[sqlalchemy,standard]>=2.17.0",
    "psycopg[binary]>=3.2.10",
    "sqlakeyset>=2.0.1746777265",
    "sqlalchemy>=2.0.43",
    "sqlalchemy-utils>=0.42.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.ruff.format]
quote-style = "single"
